log
Fri 05 May 2023 06:45:56 PM UTC: 
 tests:  0|5
total_score: 0/70
f4d477a
Fri 05 May 2023 06:59:08 PM UTC: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:25: error: ‘j’ undeclared (first use in this function)
   60 |           if(n->sudo[k][j] == 0)
      |                         ^
sudoku.c:60:25: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
04440bb
Fri 05 May 2023 06:59:15 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ebbf5b5
Fri 05 May 2023 07:15:28 PM UTC: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:50:11: error: unused variable ‘marcadosColumna’ [-Werror=unused-variable]
   50 |     int * marcadosColumna = calloc(10, sizeof(int));
      |           ^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bdff270
Fri 05 May 2023 07:15:52 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
716222c
Fri 05 May 2023 07:18:06 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
d3039d8
Fri 05 May 2023 07:19:45 PM UTC: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
928a7ee
Fri 05 May 2023 07:22:33 PM UTC: 
 sudoku.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  5|3
total_score: 35/70
36d168b
Sat 06 May 2023 11:52:22 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|3
total_score: 35/70
e10d557
Sat 06 May 2023 11:52:51 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|3
total_score: 35/70
616dd83
Sat 06 May 2023 11:54:54 PM UTC: 
 sudoku.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  5|3
total_score: 35/70
8c81fb8
Sat 06 May 2023 11:56:12 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
d7dc746
Sat 06 May 2023 11:58:48 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|3
total_score: 35/70
f054548
Sat 06 May 2023 11:59:16 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
3b067df
Sun 07 May 2023 12:10:54 AM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
9b2e273
Sun 07 May 2023 12:12:25 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:94:37: error: expected ‘)’ before ‘{’ token
   94 |               if(is_valid(nuevoNodo)
      |                 ~                   ^
      |                                     )
   95 |               {
      |               ~                      
sudoku.c:98:13: error: expected expression before ‘}’ token
   98 |             }
      |             ^
Compilation failed
f7ec86d
Sun 07 May 2023 12:12:34 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:96:17: error: implicit declaration of function ‘pushback’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   96 |                 pushback(lista,nuevoNodo);
      |                 ^~~~~~~~
      |                 pushBack
sudoku.c:96:26: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   96 |                 pushback(lista,nuevoNodo);
      |                          ^~~~~
      |                          list
sudoku.c:96:26: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
4cbae65
Sun 07 May 2023 12:12:40 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:96:17: error: implicit declaration of function ‘pushback’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   96 |                 pushback(list,nuevoNodo);
      |                 ^~~~~~~~
      |                 pushBack
cc1: all warnings being treated as errors
Compilation failed
73da4fa
Sun 07 May 2023 12:12:49 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
6a801b3
Sun 07 May 2023 12:15:36 AM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
d850c29
Sun 07 May 2023 12:17:26 AM UTC: 
 sudoku.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
1ed55f6
Sun 07 May 2023 12:21:27 AM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:83:5: error: unknown type name ‘bool’
   83 |     bool primerCeroEncontrado = false;
      |     ^~~~
sudoku.c:4:1: note: ‘bool’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    3 | #include "list.h"
  +++ |+#include <stdbool.h>
    4 | 
sudoku.c:83:33: error: ‘false’ undeclared (first use in this function)
   83 |     bool primerCeroEncontrado = false;
      |                                 ^~~~~
sudoku.c:83:33: note: ‘false’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
sudoku.c:83:33: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:90:36: error: ‘true’ undeclared (first use in this function)
   90 |             primerCeroEncontrado = true;
      |                                    ^~~~
sudoku.c:90:36: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
Compilation failed
5d204ec
Sun 07 May 2023 12:21:46 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
7398b9d
Sun 07 May 2023 12:25:45 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
75902e0
Sun 07 May 2023 12:25:54 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
bf25385
Sun 07 May 2023 12:26:20 AM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
e2f3c5a
Sun 07 May 2023 12:30:22 AM UTC: 
 sudoku.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  3|4
total_score: 20/70
b14a737
